src/test/resources/errors/wrong-function-call.intp
val sum = func(a, b) {
  return a + b
}
sum(9)